Fixed alignment of input textboxes

--- a/AppImageGenerator/Content/custom.css
+++ b/AppImageGenerator/Content/custom.css
@@ -4,6 +4,7 @@
 
 .generator input:not([type=checkbox]), .generator .uploadControl {
     width: 80%;
+    padding: 0px;
 }
 
 .generator .uploadControl {
